# OptionsBacktester

./: .gitignore  README.md  pyproject.toml  run_backtest.py
data/: sample_options.csv  sample_prices.csv
notebooks/: delta_hedge_example.ipynb
src/backtester/: __init__.py  hedger.py  pnl.py  position_manager.py  strategy.py
src/models/: __init__.py  greeks.py  option.py  position.py
src/pricing/: __init__.py  black_scholes.py  implied_vol.py
src/utils/: __init__.py  data_loader.py  helpers.py
src/volatility/: __init__.py  plotting.py  surface_models.py  vol_surface.py
tests/: test_backtester.py  test_black_scholes.py  test_hedger.py  test_implied_vol.py  test_models.py  test_strategy.py  test_volatility.py
